src/objects/vlocity_ins__ClaimPayment__c.object
<CustomObject>
    <description>Represents claim payments made by the insurance company against a policy to the claimaints. Claimants can be policy holders, benefieciaries, contractors, body shop, physicians, hospitals etc. Master-detail child object of the Claim.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>ClaimPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claim Payments</relationshipLabel>
        <relationshipName>ClaimPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuranceClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>ClaimPayments</relationshipLabel>
        <relationshipName>ClaimPayments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <formula>If(vlocity_ins__AccountId__c != null,  vlocity_ins__AccountId__r.vlocity_ins__PartyId__c,  vlocity_ins__ContactId__r.vlocity_ins__PartyId__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Claim Payment</label>
    <nameField>
        <label>Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>